trading-platform/deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: customer1
  labels:
    name: customer1
    istio-injection: disabled # Disable Istio if using native K8s policies
