trading-platform/deploy/k8s/base/execute-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: execute-service
  namespace: customer1
  labels:
    app: execute-service
    app.kubernetes.io/name: execute-service
    app.kubernetes.io/component: microservice
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: execute-service
